positioning and backgrounds

--- a/index.html
+++ b/index.html
@@ -6,38 +6,38 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <section>
-            <div class="congratulation">
-                <h1 class="congratulation__header">С Днём Рождения, Ноэль!</h1>
+        <section class="congratulation">
+            <div class="positioner">
+                <h1 class="congratulation-header">С Днём Рождения, Ноэль!</h1>
                 <img src="" alt="Ноэль">
-                <p class="congratulation__text">Поздравление</p>
+                <p class="congratulation-text">Поздравление</p>
             </div>
         </section>
-        <section>
-            <div class="videos">
-                <h2 class="videos__header">Несколько песен</h2>
-                <article>
-                    <div class="video">
-                        <h3 class="video__header">Песня 1</h3>
-                        <p class="video__text">Посвящение</p>
-                        <video></video>
-                    </div>
-                </article>
-                <article>
-                    <div class="video">
-                        <h3 class="video__header">Песня 2</h3>
-                        <p class="video__text">Посвящение</p>
-                        <video></video>
-                    </div>
-                </article>
-                <article>
-                    <div class="video">
-                        <h3 class="video__header">Песня 3</h3>
-                        <p class="video__text">Посвящение</p>
-                        <video></video>
-                    </div>
-                </article>
+        <section class="videos">
+            <div class="videos-header">
+                <h2 class="positioner">Несколько песен</h2>
             </div>
+            <article class="video">
+                <div class="positioner">
+                    <h3 class="video-header">Песня 1</h3>
+                    <p class="video-text">Посвящение</p>
+                    <video></video>
+                 </div>
+            </article>
+            <article class="video">
+                <div class="positioner">
+                    <h3 class="video-header">Песня 2</h3>
+                    <p class="video-text">Посвящение</p>
+                    <video></video>
+                </div>
+            </article>
+            <article class="video">
+                <div class="positioner">
+                    <h3 class="video-header">Песня 3</h3>
+                    <p class="video-text">Посвящение</p>
+                    <video></video>
+                </div>
+            </article>
         </section>
     </body>
 </html>
