--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
         <section class="congratulation">
             <div class="positioner">
                 <h1 class="congratulation-header">С Днём Рождения, Ноэль!</h1>
-                <img src="" alt="Ноэль">
+                <div class="congratulation-img">
+                    <div class="congratulation-hat disabled"></div>
+                </div>
                 <p class="congratulation-text">Поздравление</p>
             </div>
         </section>
@@ -39,5 +41,6 @@
                 </div>
             </article>
         </section>
+        <script src="script.js"></script>
     </body>
 </html>
