scrollbar design, gradient

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <p class="congratulation-text">Поздравление</p>
             </div>
         </section>
+        <div class="gradient"></div>
         <section class="videos">
             <div class="videos-header">
                 <h2 class="positioner">Несколько песен</h2>
@@ -23,21 +24,21 @@
                 <div class="positioner">
                     <h3 class="video-header">Песня 1</h3>
                     <p class="video-text">Посвящение</p>
-                    <video></video>
+                    <video controls></video>
                  </div>
             </article>
             <article class="video">
                 <div class="positioner">
                     <h3 class="video-header">Песня 2</h3>
                     <p class="video-text">Посвящение</p>
-                    <video></video>
+                    <video controls></video>
                 </div>
             </article>
             <article class="video">
                 <div class="positioner">
                     <h3 class="video-header">Песня 3</h3>
                     <p class="video-text">Посвящение</p>
-                    <video></video>
+                    <video controls></video>
                 </div>
             </article>
         </section>
