videos, animations, texts

--- a/index.html
+++ b/index.html
@@ -4,41 +4,41 @@
         <title>Ноэль</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="congratulation.css">
+        <link href="https://fonts.googleapis.com/css?family=Archivo+Black&display=swap" rel="stylesheet">
     </head>
     <body>
         <section class="congratulation">
             <div class="positioner">
-                <h1 class="congratulation-header">С Днём Рождения, Ноэль!</h1>
+                <h1 class="playful" aria-label="Wash your hands"><span aria-hidden="true">с</span><span aria-hidden="true"> </span><span aria-hidden="true">д</span><span aria-hidden="true">н</span><span aria-hidden="true">ё</span><span aria-hidden="true">м</span><span aria-hidden="true"> </span><span aria-hidden="true">р</span><span aria-hidden="true">о</span><span aria-hidden="true">ж</span><span aria-hidden="true">д</span><span aria-hidden="true">е</span><span aria-hidden="true">н</span><span aria-hidden="true">и</span><span aria-hidden="true">я</span><span aria-hidden="true">,</span><span aria-hidden="true"> </span><span aria-hidden="true">Н</span><span aria-hidden="true">о</span><span aria-hidden="true">э</span><span aria-hidden="true">л</span><span aria-hidden="true">ь</span><span aria-hidden="true">!</span>
+                </h1>
                 <div class="congratulation-img">
                     <div class="congratulation-hat disabled"></div>
                 </div>
-                <p class="congratulation-text">Поздравление</p>
+                <p class="congratulation-text">Любимая Ноэль!<br> Поздравляю тебя с Днём Рождения! Желаю тебе всегда расти и профессионально, и как личность, а самое главное - получать от этого процесса радость и удовольствие. И вообще, будь счастлива!</p>
             </div>
         </section>
         <div class="gradient"></div>
         <section class="videos">
             <div class="videos-header">
-                <h2 class="positioner">Несколько песен</h2>
+                <h1 class="playful"><span>н</span><span>е</span><span>с</span><span>к</span><span>о</span><span>л</span><span>ь</span><span>к</span><span>о</span><span> </span><span>п</span><span>е</span><span>с</span><span>е</span><span>н</span><span> </span><span>д</span><span>л</span><span>я</span><span> </span><span>т</span><span>е</span><span>б</span><span>я</span></h1>
             </div>
             <article class="video">
                 <div class="positioner">
-                    <h3 class="video-header">Песня 1</h3>
-                    <p class="video-text">Посвящение</p>
-                    <video controls></video>
+                    <h3 class="video-header">Песня первая</h3>
+                    <video src="files/Wonderwall.mp4" controls></video>
                  </div>
             </article>
             <article class="video">
                 <div class="positioner">
-                    <h3 class="video-header">Песня 2</h3>
-                    <p class="video-text">Посвящение</p>
-                    <video controls></video>
+                    <h3 class="video-header">Песня вторая</h3>
+                    <video src="files/Wicked Game.mp4" controls></video>
                 </div>
             </article>
             <article class="video">
                 <div class="positioner">
-                    <h3 class="video-header">Песня 3</h3>
-                    <p class="video-text">Посвящение</p>
-                    <video controls></video>
+                    <h3 class="video-header">Песня третья</h3>
+                    <video src="files/Survivors.mp4" controls></video>
                 </div>
             </article>
         </section>
